# dev-learning

./: .gitignore
backup/ekhata/: ~$DDR_test_report_62ce8cca.xlsx
backup/intrvw_prep/: 5G_Managerial_Round_Prep.md  5gnr_complete_chain.md  DFE_design.md  cell_search_and_measurements.md  freertos_phy_study.md  linux_interview_qna.md  rel15_3gpp_alignment.md  up_down.md
backup/intrvw_prep/coding_prep/: 3_c_bitwise.c  6_ds_arrays.c  8_simd_notes_x86_arm.md
backup/intrvw_prep/emb_c/: C_Embedded_Firmware_Interview_Prep.md  C_General_Interview_Prep.md  Embedded_C_Code.md  Embedded_C_Code_1.md  Embedded_C_Code_2.md  Embedded_C_Code_3.md  Embedded_C_Level_1.md  Embedded_C_Level_2.md  Embedded_C_Level_3.md  c_interview_questions.md  c_practice.md  chatgpt_qualcomm_interview_prep_notes.md  cicd_guide_nr_ue_phy.md  ex.c  interview_prep_5g_phy.md  (+4 more)
c/: CMakeLists.txt  bitwise.c  demo.c
c/data_structures/: CMakeLists.txt  ds_arrays.c  ds_doubly_linkedlist.c  ds_linkedlist.c  ds_queue.c  ds_stacks.c  ds_tree.c  test_linkedlist.c
c/doc/: c_interview_qna.md  c_overview.md  c_programs.md  c_theory.md  c_theory_qna.md  emb_c_debugging.md  emb_c_freertos.md  emb_c_notes.md  emb_c_simd.md  multi_core.md
docs/: AI_DOMAIN_APPENDIX.md  AI_GENERIC_GUIDE.md  AI_TOOLING_README.md  anthropic_skilljar_guide.html  interview_questions.html  technical_questions.html
octave/: phase_1.txt  phase_2.txt  phase_3.txt
python/: calculator.py  data.json  dictionaries.py  file_io.py  hello.txt  import_system.py  lists_loops.py  numpy_pandas_matplotlib.py  strings.py  test.py  tuples_sets.py
